@@ -1,6 +1,6 @@
 #!/bin/sh
 TEST=t23
-$PATH_POWERMAN -S $PATH_POWERMAND -C $TEST.conf \
+$PATH_POWERMAN -Y -S $PATH_POWERMAND -C $TEST.conf \
     -q -1 t0 \
     -q -c t0 \
     -q -0 t0 \
