@@ -1,6 +1,6 @@
 #!/bin/sh
 TEST=t32
-$PATH_POWERMAN -S $PATH_POWERMAND -C $TEST.conf \
+$PATH_POWERMAN -Y -S $PATH_POWERMAND -C $TEST.conf \
     -q -n -1 t[0,10,20,30,40,50,60,70,80,90,100,110,120,130,140,150] \
     -q -n -c t[0,10,20,30,40,50,60,70,80,90,100,110,120,130,140,150] \
     -q -n -0 t[0,10,20,30,40,50,60,70,80,90,100,110,120,130,140,150] \
