@@ -1,6 +1,6 @@
 #!/bin/sh
 TEST=t33
-$PATH_POWERMAN -S $PATH_POWERMAND -C $TEST.conf \
+$PATH_POWERMAN -Y -S $PATH_POWERMAND -C $TEST.conf \
     -q -n -1 t0 \
     -q -n -c t0 \
     -q -n -0 t0 \
