@@ -1,6 +1,6 @@
 #!/bin/sh
 TEST=t47
-$PATH_POWERMAN -S $PATH_POWERMAND -C $TEST.conf \
+$PATH_POWERMAN -Y -S $PATH_POWERMAND -C $TEST.conf \
     -q -1 t[0,8] \
     -q -c t[0,8] \
     -q -0 t[0,8] \
